--- a/simple_quarto_website/_quarto.yml
+++ b/simple_quarto_website/_quarto.yml
@@ -7,7 +7,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.ipynb
+      - href: about.qmd
+        text: About
+      - href: ../slides/slides.qmd
+        text: Slides
 
 format:
   html:
